[metadata]
name = daptools
version = 0.1.0
author = Pravir Kumar
author_email = pravirka@gmail.com
maintainer = Pravir Kumar
maintainer_email = pravirka@gmail.com
url = https://github.com/pravirkr/daptools
description = python tools to query and download from CSIRO Data Access Portal
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = daptools
zip_safe = false
include_package_data = false
python_requires = >=3.6
test_suite = tests
setup_requires =
    setuptools
install_requires =
    numpy
    requests-futures

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-randomly
    pytest-sugar
    pytest-benchmark
docs =
    sphinx>=3.2.1
    sphinx_rtd_theme>=0.5.0
    pandoc
    ipython
    breathe
    commonmark
    recommonmark
    nbsphinx


[flake8]
ignore =
    # Default ignore
    BLK100,I900,W503,R504,E221,T001,
    # Isort
    I,
    # Docstrings
    D,
    # PEP 8 Naming Conventions
    N,
    # Trailing commas
    C812,
    # WPS
    WPS102, WPS110, WPS210, WPS218, WPS305, WPS317, WPS318, WPS319,
    WPS326, WPS352, WPS410, WPS412, WPS421, WPS432, WPS600, WPS602,
    WPS220
    # quotes
    Q000
    # bandit assert
    S101
    # whitespace before colon
    E203
exclude = .git, .eggs, __pycache__, docs/, old/, build/, dist/
max-methods = 20
max-attributes = 10
max-arguments = 10
max-complexity = 10
max-string-usages = 20
max-cognitive-score = 20
max-line-complexity = 30
max-module-members = 20
max-module-expressions = 20
max-function-expressions = 10
max-line-length = 127
rst-roles =
    attr,class,func,meth,mod,obj,ref,term,
    # C programming language:
    c:member,
    # Python programming language:
    py:func,py:mod,py:obj


[darglint]
docstring_style=numpy


[tool:pytest]
minversion = 6
testpaths = tests

[coverage:run]
omit =
    *setup.py
	*__init__.py
	*tests*
	*docs*

[coverage:report]
show_missing = True
ignore_errors = True
#fail_under = 85
exclude_lines =
	raise AssertionError
	raise NotImplementedError

[coverage:paths]
source = ./
